[package]
name = "todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "3.3.2"
env_logger = "0.9.0"
log = "0.4.14"
log4rs = "1.0.0"
thiserror = "1.0.29"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.131"
derive_more = "0.99.17"


